# Pibald

./: Cargo.toml  README.md
resources/: Cube.pibm  axes.pibm  clip_0_aPose.piba  clip_idle.piba  clip_jump.piba  clip_run.piba  clip_test_action.piba  clip_walk.piba  rho.pibm  rho.pibs
src/: controller.rs  logger.rs  main.rs  pibald.pest  window.rs
src/pibald/: mod.rs  test.rs
src/renderer/: mod.rs  test.rs
src/renderer/data/: mod.rs  test.rs
src/renderer/gpu/: animated.wgsl  gpu.rs  gpu_camera.rs  gpu_light.rs  gpu_model.rs  gpu_store.rs  mod.rs  renderer.rs  static.wgsl
src/renderer/render_state/: animation.rs  common.rs  light.rs  mod.rs  model.rs  properties.rs  render_state.rs  texture.rs  view.rs
